fix light and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,7 @@
 * {
   font-family: 'Nunito Sans', sans-serif;
 }
+
+body {
+  margin: 0 !important;
+}
